--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,13 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" android:background="#FFFFFF">
 
+	<ScrollView android:id="@+id/ScrollView01" 
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent">
     <TextView
         android:id="@+id/textView1" 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:textColor="#000000"/>
+    </ScrollView>
 </LinearLayout>
